Fixed #192, word-wrapping long strings.

--- a/peruse.css
+++ b/peruse.css
@@ -36,6 +36,7 @@ p {
 	margin-top: 1.5em;
 	margin-bottom: 1.5em;
 	margin-right: 1.5em;
+	word-break: break-word;
 }
 
 /* Drop cap in the first paragraph's first letter. */
